Resellers can be denied access to plans using the Edit Reseller page, or via the modify-reseller API call.
Extra administrators can now change their own passwords, via a new link on the left menu.
Added a DNS template option to control which A records are added to new domains.
Fixed a bug that prevented paths in php.ini from being updated when a domain is renamed or moved.
Added a button on the Edit Reseller page to clone his settings for a new reseller.
Removed the 'Bring up virtual interfaces?' module configuration option, as use of an existing interface can now be done on a per-domain basis.
---- Changes since 3.74 ----
Updated the phpMyAdmin script installer to versions 3.2.3 and 2.11.9.6, OpenX to 2.8.2, PiWik to 0.4.5, Moodle to 1.9.6, WordPress to 2.8.5, Typo3 to 4.2.10, SugarCRM to 5.2.0k, TikiWiki to 3.3, WordPress MU to 2.8.5.2, Redmine to 0.8.6, Joomla to 1.5.15, Zikula to 1.2.0, Bugzilla to 3.4.3, and Plans to 8.1.5.
Added a domain owner level capability restriction to prevent editing of external IP addresses.
When a sub-server is converted to a top-level server, files from /etc/skel are copied into its home directory.
When a virtual server is disabled, all extra admin logins are disabled too.
When a mailbox user is delete, his Dovecot index and control files are removed too in order to avoid clashes with future users with the same name.
Added a Module Config setting to make collection of all available packages optional.
Added the list-php-ini API command for fetching PHP settings from one or more domains.
Added a logrotate template-level option for additional files to rotate for new domains.
When restoring a virtual server with a php.ini file whose extension directory is incorrect, fix it to match this system if possible.
Added the import-database API command, for associating an existing un-owned database with a domain.
The Manage SSL Certificate page can now be used to copy a domain's cert and key to Dovecot or Postfix.